include/Win32/Physics.NGDImport.hpp

//-- type declarations -------------------------------------------------------
typedef float dFloat;
typedef float *PdFloat;
typedef short *PShort;
typedef void * PNewtonMesh;
//-- var, const, procedure ---------------------------------------------------
#define NewtonDLL L"newton32.dll"
extern "C" void __cdecl NewtonMeshCalculateVertexNormals(const void * Mesh, float angleInRadians);
extern "C" void __cdecl NewtonMeshApplySphericalMapping(const void * Mesh, int material);
extern "C" void __cdecl NewtonMeshApplyBoxMapping(const void * Mesh, int front, int side, int top);
extern "C" void __cdecl NewtonMeshApplyCylindricalMapping(const void * Mesh, int cylinderMaterial, int capMaterial);
extern "C" int __cdecl NewtonMeshIsOpenMesh(const void * Mesh);
extern "C" void __cdecl NewtonMeshFixTJoints(const void * Mesh);
extern "C" void __cdecl NewtonMeshPolygonize(const void * Mesh);
extern "C" void __cdecl NewtonMeshTriangulate(const void * Mesh);
extern "C" void * __cdecl NewtonMeshUnion(const void * Mesh, void * clipper, PdFloat clipperMatrix);
extern "C" void * __cdecl NewtonMeshDifference(const void * Mesh, void * clipper, PdFloat clipperMatrix);
extern "C" void * __cdecl NewtonMeshIntersection(const void * Mesh, void * clipper, PdFloat clipperMatrix);
extern "C" void __cdecl NewtonMeshClip(const void * Mesh, const void * clipper, const PdFloat clipperMatrix, const void * topMesh, const void * bottomMesh);
extern "C" void __cdecl NewtonMeshPlaneClip(const void * Mesh, const PdFloat planeMatrix, const PdFloat PlaneTextureMatrix, int PlaneMaterial, const void * topMesh, const void * bottomMesh);
extern "C" void * __cdecl NewtonMeshConvexDecomposition(const void * Mesh, int maxCount);
extern "C" void * __cdecl NewtonMeshVoronoiDecomposition(const void * Mesh, int PointCount, int PointStrideInBytes, const PdFloat PointCloud, int InternalMaterial, const PdFloat TextureMatrix);
extern "C" void __cdecl NewtonRemoveUnusedVertices(const void * Mesh, System::PInteger vertexRemapTable);
extern "C" void __cdecl NewtonMeshBeginFace(const void * Mesh);
extern "C" void __cdecl NewtonMeshAddFace(const void * Mesh, int vertexCount, const PdFloat vertex, int strideInBytes, int materialIndex);
extern "C" void __cdecl NewtonMeshEndFace(const void * Mesh);
extern "C" void __cdecl NewtonMeshBuildFromVertexListIndexList(const void * Mesh, int FaceCount, const System::PInteger faceIndexCount, const System::PInteger faceMaterialIndex, const PdFloat vertex, int vertexStrideInBytes, const System::PInteger vertexIndex, const PdFloat normal, int normalStrideInBytes, const System::PInteger normalIndex, const PdFloat uv0, int uv0StrideInBytes, const System::PInteger uv0Index, const PdFloat uv1, int uv1StrideInBytes, const System::PInteger uv1Index);
extern "C" void __cdecl NewtonMeshGetVertexStreams(const void * Mesh, int vertexStrideInByte, PdFloat vertex, int normalStrideInByte, PdFloat normal, int uvStrideInByte0, PdFloat uv0, int uvStrideInByte1, PdFloat uv1);
extern "C" void __cdecl NewtonMeshGetIndirectVertexStreams(const void * Mesh, int vertexStrideInByte, PdFloat vertex, System::PInteger vertexIndices, System::PInteger vertexCount, int normalStrideInByte, PdFloat normal, System::PInteger normalIndices, System::PInteger normalCount, int uvStrideInByte0, PdFloat uv0, System::PInteger uvIndices0, System::PInteger uvCount0, int uvStrideInByte1, PdFloat uv1, System::PInteger uvIndices1, System::PInteger uvCount1);
extern "C" void * __cdecl NewtonMeshBeginHandle(const void * Mesh);
extern "C" void __cdecl NewtonMeshEndHandle(const void * Mesh, void * Handle);
extern "C" int __cdecl NewtonMeshFirstMaterial(const void * Mesh, void * Handle);
extern "C" int __cdecl NewtonMeshNextMaterial(const void * Mesh, void * Handle, int materialID);
extern "C" int __cdecl NewtonMeshMaterialGetMaterial(const void * Mesh, void * Handle, int materialID);
extern "C" int __cdecl NewtonMeshMaterialGetIndexCount(const void * Mesh, void * Handle, int materialID);
extern "C" void __cdecl NewtonMeshMaterialGetIndexStream(const void * Mesh, void * Handle, int materialID, System::PInteger index);
extern "C" void __cdecl NewtonMeshMaterialGetIndexStreamShort(const void * Mesh, void * Handle, int materialID, PShort index);
extern "C" void * __cdecl NewtonMeshCreateFirstSingleSegment(const void * Mesh);
extern "C" void * __cdecl NewtonMeshCreateNextSingleSegment(const void * Mesh, void * Segment);
extern "C" void * __cdecl NewtonMeshCreateFirstLayer(const void * Mesh);
extern "C" void * __cdecl NewtonMeshCreateNextLayer(const void * Mesh, const void * Segment);
extern "C" int __cdecl NewtonMeshGetTotalFaceCount(const void * Mesh);
extern "C" int __cdecl NewtonMeshGetTotalIndexCount(const void * Mesh);
extern "C" void __cdecl NewtonMeshGetFaces(const void * Mesh, const System::PInteger faceIndexCount, System::PInteger faceMaterial, System::PInteger faceIndices);
extern "C" int __cdecl NewtonMeshGetPointCount(const void * Mesh);
extern "C" int __cdecl NewtonMeshGetPointStrideInByte(const void * Mesh);
extern "C" PdFloat __cdecl NewtonMeshGetPointArray(const void * Mesh);
extern "C" PdFloat __cdecl NewtonMeshGetNormalArray(const void * Mesh);
extern "C" PdFloat __cdecl NewtonMeshGetUV0Array(const void * Mesh);
extern "C" PdFloat __cdecl NewtonMeshGetUV1Array(const void * Mesh);
extern "C" int __cdecl NewtonMeshGetVertexCount(const void * Mesh);
extern "C" int __cdecl NewtonMeshGetVertexStrideInByte(const void * Mesh);
extern "C" PdFloat __cdecl NewtonMeshGetVertexArray(const void * Mesh);
extern "C" void * __cdecl NewtonMeshGetFirstVertex(const void * Mesh);
extern "C" void * __cdecl NewtonMeshGetNextVertex(const void * Mesh, const void * vertex);
extern "C" int __cdecl NewtonMeshGetVertexIndex(const void * Mesh, const void * vertex);
extern "C" void * __cdecl NewtonMeshGetFirstPoint(const void * Mesh);
extern "C" void * __cdecl NewtonMeshGetNextPoint(const void * Mesh, const void * point);
extern "C" int __cdecl NewtonMeshGetPointIndex(const void * Mesh, const void * point);
extern "C" int __cdecl NewtonMeshGetVertexIndexFromPoint(const void * Mesh, const void * point);
extern "C" void * __cdecl NewtonMeshGetFirstEdge(const void * Mesh);
extern "C" void * __cdecl NewtonMeshGetNextEdge(const void * Mesh, const void * Edge);
extern "C" void __cdecl NewtonMeshGetEdgeIndices(const void * Mesh, const void * Edge, System::PInteger v0, System::PInteger v1);